* ???
- [lc] fixed a bug with element name generation

* Wed May 22 2013 Lionel Cons <lionel.cons@cern.ch> - 1.3
- [lc] improved the test scripts
- [mp] improved Python3 support
- [lc] cleanup the documentation and added a TODO file
- [mp] added pep8 complaince
- [lc] fixed the mode of newly created files

* Mon Jun 04 2012 K. Skaburskas <Konstantin.Skaburskas@gmail.com> - 1.2.2
- [ks] fixed race condition in QueueSimple.lock()

* Sun May 06 2012 K. Skaburskas <Konstantin.Skaburskas@gmail.com> - 1.2.1
- [mp] fixing escaping bug in hash2string and string2hash
- [mp] fixing string2hash bug when given string is empty
- [mp] cleaning to make pylint happier
- [mp] adding python3 support

* Wed Mar 28 2012 K. Skaburskas <Konstantin.Skaburskas@gmail.com> - 1.1.2
- [ks] removed "from .<module> import" as we have to support Python <= 2.4 

* Mon Mar 19 2012 K. Skaburskas <Konstantin.Skaburskas@gmail.com> - 1.1.1
- [ks] minor fix for failing build under Python 3
- [ks] updated test of dirq.Queue.touch()

* Thu Mar 01 2012 K. Skaburskas <Konstantin.Skaburskas@gmail.com> - 1.1.0
- [mp] added QueueNull which is kind of a black hole
- [ks] fixed a bug with providing umask to QueueBase constructor

* Mon Dec 05 2011 K. Skaburskas <Konstantin.Skaburskas@gmail.com> - 1.0.1
- [ks] updated documentation and unified versioning

* Sun Dec 04 2011 K. Skaburskas <Konstantin.Skaburskas@gmail.com> - 1.0.0
- [ks] after more testing and followed fixes promoted to version 1.0.0

* Thu Nov 03 2011 K. Skaburskas <Konstantin.Skaburskas@gmail.com> - 0.1.0
- [ks] updated the interface and overall implementation to comply with the
  changes in original Perl Directory::Queue implementation as of version 1.2
   + added the touch() method
   + improved the speed of the purge() method for large queues
   + NB! Although, it's possible to provide schema as in Directory::Queue
     with '*' to request returning of data by reference this is not actually
     relevant in case of Python