@@ -1,5 +1,4 @@
 TODO list
 =========
 
-- add support for the rndhex attribute from Perl's Directory::Queue
 - fix race condition between os.path.exists() and codecs.open() in QueueBase.py
